--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,5 +1,14 @@
-#home-image {
-    border: none;
+.container {
+    margin: 30px 0 30px 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 15px;
 }
 
 a {
@@ -10,4 +19,8 @@ a {
         color: #fff;
         text-decoration: underline;
     }
+}
+
+#home-image {
+    border: none;
 }
