--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,14 +1,30 @@
+body {
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-size: 1rem;
+}
+
 .container {
     margin: 30px 0 30px 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-bottom: 15px;
+h1 {
+    margin: 56px 0 32px 0;
+}
+
+h2 {
+    margin: 48px 0 20px 0;
+}
+
+h3 {
+    margin: 36px 0 12px 0;
+}
+
+h4 {
+    margin: 20px 0 8px 0;
+}
+
+ul>li {
+    margin: 10px 0 10px 0;
 }
 
 a {
