--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -27,6 +27,11 @@ ul>li {
     margin: 10px 0 10px 0;
 }
 
+ul#nav-links>li,
+ul#nav-social>li {
+    margin: 0;
+}
+
 a {
     color: #fff;
     text-decoration: underline;
