--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,6 +1,6 @@
 body {
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 #content {
@@ -39,8 +39,14 @@ ul#nav-social>li {
 
 ul#nav-links>li>a,
 ul#nav-social>li>a {
-    font-size: 14px;
+    font-size: 16px;
+    text-decoration: none;
 }
+
+ul#nav-links>li>a:hover {
+    text-decoration: underline;
+}
+
 
 a {
     color: #fff;
